Squash to single commit