@@ -29,11 +29,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.stubbing.Answer;
 
-import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
+import java.time.Instant;
 
-import static java.time.temporal.ChronoUnit.MINUTES;
-
+import static cd.go.contrib.elasticagent.Constants.ENVIRONMENT_LABEL_KEY;
 import static cd.go.contrib.elasticagent.Constants.JOB_ID_LABEL_KEY;
 import static cd.go.contrib.elasticagent.utils.Util.getSimpleDateFormat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -90,9 +90,9 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         Agent agent2 = new Agent(agentId2, Agent.AgentState.Idle, Agent.BuildState.Idle, Agent.ConfigState.Enabled); //idle just created
         Agent agent3 = new Agent(agentId3, Agent.AgentState.Building, Agent.BuildState.Building, Agent.ConfigState.Enabled); //running time elapsed
 
-        KubernetesInstance k8sPodForAgent1 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId1, Collections.emptyMap(), 1L, PodState.Running);
-        KubernetesInstance k8sPodForAgent2 = new KubernetesInstance(Instant.now(), null, agentId2, Collections.emptyMap(), 2L, PodState.Running);
-        KubernetesInstance k8sPodForAgent3 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId3, Collections.emptyMap(), 3L, PodState.Running);
+        KubernetesInstance k8sPodForAgent1 = KubernetesInstance.builder().createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId1).jobId(1L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent2 = KubernetesInstance.builder().createdAt(Instant.now()).environment("test").podName(agentId2).jobId(2L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent3 = KubernetesInstance.builder().createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId3).jobId(3L).podState(PodState.Running).build();
 
         final Agents allAgentsInitially = new Agents(Arrays.asList(agent1, agent2, agent3));
         final Agents allAgentsAfterDisablingIdleAgents = new Agents(Arrays.asList(agent1AfterDisabling, agent2, agent3));
@@ -112,13 +112,13 @@ public class ServerPingRequestExecutorTest extends BaseTest {
 
         when(pluginRequest.listAgents()).thenReturn(allAgentsInitially, allAgentsAfterDisablingIdleAgents, new Agents());
 
-        assertTrue(clusterSpecificInstances.get(clusterProfileProperties.uuid()).hasInstance(k8sPodForAgent1.name()));
+        assertTrue(clusterSpecificInstances.get(clusterProfileProperties.uuid()).hasInstance(k8sPodForAgent1.getPodName()));
 
         new ServerPingRequestExecutor(serverPingRequest, clusterSpecificInstances, pluginRequest).execute();
 
         verify(pluginRequest, atLeastOnce()).disableAgents(Collections.singletonList(agent1));
         verify(pluginRequest, atLeastOnce()).deleteAgents(Collections.singletonList(agent1AfterDisabling));
-        assertFalse(clusterSpecificInstances.get(clusterProfileProperties.uuid()).hasInstance(k8sPodForAgent1.name()));
+        assertFalse(clusterSpecificInstances.get(clusterProfileProperties.uuid()).hasInstance(k8sPodForAgent1.getPodName()));
     }
 
     @Test
@@ -144,13 +144,27 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         Agent agent5 = new Agent(agentId5, Agent.AgentState.Idle, Agent.BuildState.Idle, Agent.ConfigState.Enabled); //idle just created
         Agent agent6 = new Agent(agentId6, Agent.AgentState.Building, Agent.BuildState.Building, Agent.ConfigState.Enabled); //running time elapsed
 
-        KubernetesInstance k8sPodForAgent1 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId1, Collections.emptyMap(), 1L, PodState.Running);
-        KubernetesInstance k8sPodForAgent2 = new KubernetesInstance(Instant.now(), null, agentId2, Collections.emptyMap(), 2L, PodState.Running);
-        KubernetesInstance k8sPodForAgent3 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId3, Collections.emptyMap(), 3L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent1 = KubernetesInstance.of(Instant.now().minus(100, ChronoUnit.MINUTES), "test", agentId1, Collections.emptyMap(), 1L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent2 = KubernetesInstance.of(Instant.now(), "test", agentId2, Collections.emptyMap(), 2L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent3 = KubernetesInstance.of(Instant.now().minus(100, ChronoUnit.MINUTES), "test", agentId3, Collections.emptyMap(), 3L, PodState.Running);
 
-        KubernetesInstance k8sPodForAgent4 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId4, Collections.emptyMap(), 1L, PodState.Running);
-        KubernetesInstance k8sPodForAgent5 = new KubernetesInstance(Instant.now(), null, agentId5, Collections.emptyMap(), 2L, PodState.Running);
-        KubernetesInstance k8sPodForAgent6 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, agentId6, Collections.emptyMap(), 3L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent4 = KubernetesInstance.of(Instant.now().minus(100, ChronoUnit.MINUTES), "test", agentId4, Collections.emptyMap(), 1L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent5 = KubernetesInstance.of(Instant.now(), "test", agentId5, Collections.emptyMap(), 2L, PodState.Running);
+        // KubernetesInstance k8sPodForAgent6 = KubernetesInstance.of(Instant.now().minus(100, ChronoUnit.MINUTES), "test", agentId6, Collections.emptyMap(), 3L, PodState.Running);
+
+        KubernetesInstance k8sPodForAgent1 = KubernetesInstance.builder()
+                .createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId1).jobId(1L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent2 = KubernetesInstance.builder()
+                .createdAt(Instant.now()).environment("test").podName(agentId1).jobId(2L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent3 = KubernetesInstance.builder()
+                .createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId3).jobId(3L).podState(PodState.Running).build();
+
+        KubernetesInstance k8sPodForAgent4 = KubernetesInstance.builder()
+                .createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId4).jobId(1L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent5 = KubernetesInstance.builder()
+                .createdAt(Instant.now()).environment("test").podName(agentId5).jobId(2L).podState(PodState.Running).build();
+        KubernetesInstance k8sPodForAgent6 = KubernetesInstance.builder()
+                .createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(agentId6).jobId(3L).podState(PodState.Running).build();
 
         final Agents allAgentsInitially = new Agents(Arrays.asList(agent1, agent2, agent3, agent4, agent5, agent6));
         final Agents allAgentsAfterDisablingIdleAgentsFromCluster1 = new Agents(Arrays.asList(agent1AfterDisabling, agent2, agent3, agent4, agent5, agent6));
@@ -179,8 +193,8 @@ public class ServerPingRequestExecutorTest extends BaseTest {
 
         when(pluginRequest.listAgents()).thenReturn(allAgentsInitially, allAgentsAfterDisablingIdleAgentsFromCluster1, allAgentsAfterTerminatingIdleAgentsFromCluster1, allAgentsAfterDisablingIdleAgentsFromCluster2, allAgentsAfterTerminatingIdleAgentsFromCluster2, new Agents());
 
-        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sPodForAgent1.name()));
-        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster2.uuid()).hasInstance(k8sPodForAgent4.name()));
+        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sPodForAgent1.getPodName()));
+        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster2.uuid()).hasInstance(k8sPodForAgent4.getPodName()));
 
         new ServerPingRequestExecutor(serverPingRequest, clusterSpecificInstances, pluginRequest).execute();
 
@@ -190,8 +204,8 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         verify(pluginRequest, atLeastOnce()).disableAgents(Collections.singletonList(agent4));
         verify(pluginRequest, atLeastOnce()).deleteAgents(Collections.singletonList(agent4AfterDisabling));
 
-        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sPodForAgent1.name()));
-        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster2.uuid()).hasInstance(k8sPodForAgent4.name()));
+        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sPodForAgent1.getPodName()));
+        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster2.uuid()).hasInstance(k8sPodForAgent4.getPodName()));
     }
 
     @Test
@@ -204,16 +218,18 @@ public class ServerPingRequestExecutorTest extends BaseTest {
         when(mockedOperation.withName(anyString())).thenReturn(podResource);
         when(podResource.get()).thenReturn(mockedPod);
         objectMetadata = new ObjectMeta();
-        objectMetadata.setLabels(Collections.singletonMap(JOB_ID_LABEL_KEY, "20"));
+        objectMetadata.setLabels(Map.of(JOB_ID_LABEL_KEY, "20", ENVIRONMENT_LABEL_KEY, "test"));
         objectMetadata.setName(unregisteredAgentId1);
-        objectMetadata.setCreationTimestamp(getSimpleDateFormat().format(Instant.now().minus(20, MINUTES)));
+        objectMetadata.setCreationTimestamp(getSimpleDateFormat().format(new Date(time - (20 * 60000))));
 
         when(mockedPod.getMetadata()).thenReturn(objectMetadata);
 
         ClusterProfileProperties clusterProfilePropertiesForCluster1 = new ClusterProfileProperties("https://localhost:8154/go", null, null);
 
-        KubernetesInstance k8sUnregisteredCluster1Pod1 = new KubernetesInstance(Instant.now().minus(100, MINUTES), null, unregisteredAgentId1, Collections.emptyMap(), 3L, PodState.Running);
-        KubernetesInstance k8sUnregisteredCluster1Pod2 = new KubernetesInstance(Instant.now(), null, unregisteredAgentId2, Collections.emptyMap(), 3L, PodState.Running);
+        KubernetesInstance k8sUnregisteredCluster1Pod1 = KubernetesInstance.builder()
+                .createdAt(Instant.now().minus(100, ChronoUnit.MINUTES)).environment("test").podName(unregisteredAgentId1).jobId(3L).podState(PodState.Running).build();
+        KubernetesInstance k8sUnregisteredCluster1Pod2 = KubernetesInstance.builder()
+                .createdAt(Instant.now()).environment("test").podName(unregisteredAgentId2).jobId(3L).podState(PodState.Running).build();
 
         final Agents allAgentsInitially = new Agents();
 
@@ -231,13 +247,13 @@ public class ServerPingRequestExecutorTest extends BaseTest {
 
         when(pluginRequest.listAgents()).thenReturn(allAgentsInitially);
 
-        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod1.name()));
-        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod2.name()));
+        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod1.getPodName()));
+        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod2.getPodName()));
 
         new ServerPingRequestExecutor(serverPingRequest, clusterSpecificInstances, pluginRequest).execute();
 
-        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod1.name()));
-        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod2.name()));
+        assertFalse(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod1.getPodName()));
+        assertTrue(clusterSpecificInstances.get(clusterProfilePropertiesForCluster1.uuid()).hasInstance(k8sUnregisteredCluster1Pod2.getPodName()));
     }
 
     @Test
